BUGFIX: Cropping border animation
Fixes the issue of not being able to find Jcrop.gif

--- a/TYPO3.Neos/Resources/Private/Styles/Inspector/_SecondaryInspector.scss
+++ b/TYPO3.Neos/Resources/Private/Styles/Inspector/_SecondaryInspector.scss
@@ -60,6 +60,11 @@
 		.jcrop-holder {
 			margin: 0 auto;
 		}
+
+		.jcrop-vline,
+		.jcrop-hline {
+			background: url('../Library/jcrop/css/Jcrop.gif') #fff;
+		}
 	}
 
 	.neos-image-editor-crop-aspect-ratio {
